--- a/src/site-components/common/assets/css/style.css
+++ b/src/site-components/common/assets/css/style.css
@@ -1971,8 +1971,8 @@ a.badge-dark {
 }
 
 .btn-dark {
-  background: #6c9674 !important;
-  border-color: #6c9674 !important;
+  background: #e20014!important;
+  border-color: #e20014!important;
   color: #fff !important;
   font-size: 16px;
   font-weight: 700;
@@ -1981,8 +1981,8 @@ a.badge-dark {
 .btn-dark:focus,
 .btn-dark:active,
 .btn-dark.active {
-  background: #6c9674 !important;
-  border-color: #6c9674 !important;
+  background: #e20014!important;
+  border-color: #e20014!important;
 }
 
 .btn-dark.disabled,
@@ -4170,8 +4170,8 @@ textarea,
 }
 
 .form-check-input:checked ~ .form-check-label:after {
-  background-color: #6c9674;
-  border-color: #6c9674 !important;
+  background-color: #e20014;
+  border-color: #e20014!important;
 }
 
 .form-check-input:checked ~ .form-check-label:before {
@@ -8028,7 +8028,7 @@ body.dark-mode .cookies-box {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #6c9674;
+  background-color: #e20014;
   display: grid;
   place-content: center;
   font-size: 20px;
@@ -8098,12 +8098,12 @@ body.dark-mode .cookies-box {
   display: block;
 }
 .select2-container--default .select2-results__option--highlighted.select2-results__option--selectable {
-  background-color: #6c9674 !important;
+  background-color: #e20014!important;
   color: white;
 }
 .select2-container--default .select2-search--dropdown .select2-search__field {
   border: 1px solid #aaa;
-  outline-color: #6c9674 !important;
+  outline-color: #e20014!important;
 }
 .select2-container--default .select2-selection--single {
   border: none;
@@ -8362,7 +8362,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   top: -22px;
   left: 50%;
   transform: translateX(-50%);
-  background: #6c9674;
+  background: #e20014;
   color: white;
   width: 53px;
   height: 53px;
