--- a/src/site-components/common/assets/css/style.css
+++ b/src/site-components/common/assets/css/style.css
@@ -8150,8 +8150,8 @@ body.dark-mode .cookies-box {
 .id-login-top-img {
   position: relative; /* Make the container position relative */
   border-radius: 0px 0px 60px;
-  padding: 166px 10px 30px;
-  background-image: url(../img/army-login.jpeg);
+  padding: 250px 10px 30px;
+  background-image: url(../img/patient-doctor.jpg);
   background-size: cover;
   background-position: center;
   z-index: 0; /* Ensure content is on top of the background image */
@@ -8165,7 +8165,6 @@ body.dark-mode .cookies-box {
   left: 0;
   right: -1px;
   bottom: 0;
-  background-color: rgb(36 76 65 / 96%); /* Semi-transparent black overlay */
   border-radius: 0px 0px 60px; /* Match the container's border-radius */
   z-index: -1; /* Ensure overlay is behind content */
 }
