--- a/src/site-components/common/assets/css/style.css
+++ b/src/site-components/common/assets/css/style.css
@@ -3786,7 +3786,7 @@ textarea,
 .form-group.basic .form-control:focus,
 .form-group.basic .custom-select:focus {
   box-shadow: none;
-  border-bottom: 1px solid #ffb901;
+  border-bottom: 1px solid #e20014;
 }
 
 .form-group.basic .custom-select {
@@ -8038,7 +8038,7 @@ body.dark-mode .cookies-box {
 .am-sidebar {
   width: 100%;
   height: 100%;
-  background: #fff;
+  background: whitesmoke;
   transition: left 0.3s ease-in-out;
 }
 
@@ -8156,26 +8156,28 @@ body.dark-mode .cookies-box {
 /* login page css start here  */
 .id-login-top-img {
   position: relative; /* Make the container position relative */
-  border-radius: 0px 0px 60px;
+  /* border-radius: 0px 0px 60px; */
   padding: 250px 10px 30px;
-  background-image: url(../img/patient-doctor.jpg);
-  background-size: cover;
+  /* background-image: url(../img/BloodDonation.png); */
+  background-image: url(../img/donation-img.jpg);
+  background-size: contain;
   background-position: center;
+  background-repeat: no-repeat;
   z-index: 0; /* Ensure content is on top of the background image */
+  margin-top: 40px;
 }
 
 /* Add overlay */
-.id-login-top-img::before {
+/* .id-login-top-img::before {
   content: "";
-  position: absolute; /* Position the overlay */
+  position: absolute; 
   top: 0;
   left: 0;
   right: -1px;
   bottom: 0;
-  border-radius: 0px 0px 60px; /* Match the container's border-radius */
-  z-index: -1; /* Ensure overlay is behind content */
-  background: #395f0ca1;
-}
+  border-radius: 0px 0px 60px; 
+  z-index: -1; 
+} */
 
 input[type="date"]::-webkit-calendar-picker-indicator {
   display: none;
@@ -8321,8 +8323,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   align-items: center;
 }
 .am-dropdown span ion-icon {
-  margin-right: 8px;
-  font-size: 20px;
+  margin-right: 8px !important;
+  font-size: 20px !important;
 }
 .left-0 {
   left: 0 !important;
