--- a/src/site-components/common/assets/css/style.css
+++ b/src/site-components/common/assets/css/style.css
@@ -85,11 +85,14 @@ a:focus {
   position: absolute;
 }
 
+.appHeader .right {
+  height: 64px !important;
+}
 .appHeader .left .icon,
-.appHeader .left ion-icon,
+.appHeader .left .id-back-icon,
 .appHeader .right .icon,
-.appHeader .right ion-icon {
-  font-size: 26px;
+.appHeader .right .id-back-icon {
+  font-size: 20px;
   margin-right: 0px ;
 }
 
@@ -103,6 +106,7 @@ a:focus {
   align-items: center;
   color: #3a5f0b;
   position: relative;
+  font-size: 22px !important;
 }
 
 .appHeader .left .headerButton .btn,
@@ -130,7 +134,7 @@ a:focus {
 .appHeader .pageTitle {
   font-size: 17px;
   font-weight: 500;
-  padding: 0 10px;
+  /* padding: 0 10px; */
 }
 
 .appHeader .pageTitle .logo {
@@ -6370,6 +6374,7 @@ html[dir="rtl"] .appHeader .right,
 body.rtl-mode .appHeader .right {
   right: auto;
   left: 10px;
+  
 }
 
 html[dir="rtl"] .link-listview > li a,
@@ -7706,6 +7711,15 @@ body.dark-mode .searchbox .form-control:focus ~ .input-icon {
   color: #fff;
 }
 
+.form-control:focus {
+  color: #212529;
+  background-color: #fff;
+  border-color: #e20014;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 10%);
+}
+
+
 body.dark-mode .searchbox .close {
   color: #69587f;
 }
@@ -8038,7 +8052,7 @@ body.dark-mode .cookies-box {
 .am-sidebar {
   width: 100%;
   height: 100%;
-  background: whitesmoke;
+  background: #fff;
   transition: left 0.3s ease-in-out;
 }
 
