--- a/src/site-components/Donor/css/custom.css
+++ b/src/site-components/Donor/css/custom.css
@@ -53,3 +53,37 @@
   padding-bottom:60px ;
 
 }
+
+
+.blood-drop {
+  width: 50px;
+  height: 60px;
+  background: radial-gradient(
+    circle at top,
+    rgba(255, 100, 100, 0.9),
+    rgba(150, 0, 0, 1)
+  );
+  border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ box-shadow: 0px 5px 10px rgb(150 0 0 / 32%);
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+
+/* Light reflection */
+.blood-drop::before {
+  content: "";
+  position: absolute;
+  top: 12px;
+  left: 18px;
+  width: 12px;
+  height: 12px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 50%;
+  opacity: 0.8;
+}
