--- a/src/site-components/common/assets/css/style.css
+++ b/src/site-components/common/assets/css/style.css
@@ -8404,3 +8404,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 /* .appBottomMenu .active .col ion-icon{
   color: red !important;
 } */
+.id-dash-b-img{
+  height: 50px;
+}
