--- a/src/site-components/common/assets/css/style.css
+++ b/src/site-components/common/assets/css/style.css
@@ -8404,3 +8404,14 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 /* .appBottomMenu .active .col ion-icon{
   color: red !important;
 } */
+
+.loader-circle {
+  border: 3px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 3px solid #3498db;
+  width: 20px;
+  height: 20px;
+  -webkit-animation: spinc 1s linear infinite;
+  /* Safari */
+  animation: spinc 1s linear infinite;
+}
