--- a/src/site-components/common/assets/css/style.css
+++ b/src/site-components/common/assets/css/style.css
@@ -223,7 +223,7 @@ a:focus {
 .appBottomMenu {
   min-height: 56px;
   position: fixed;
-  z-index: 999;
+  z-index: 899;
   width: 100%;
   bottom: 0;
   left: 0;
@@ -8412,4 +8412,45 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   animation: spinc 1s linear infinite;
 }.id-dash-b-img{
   height: 60px;
+}
+
+#loader {
+  background: #6c757ded;
+}
+
+.loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+  /* Semi-transparent dark background */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  /* Make sure it's on top of other content */
+}
+
+.loader {
+  border: 4px solid rgba(255, 255, 255, 0.2);
+  /* Semi-transparent border */
+  border-top: 4px solid #ffffff;
+  /* White border for spinning effect */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  /* Rotation animation */
+}
+
+@keyframes spin {
+  0% {
+      transform: rotate(0deg);
+  }
+
+  100% {
+      transform: rotate(360deg);
+  }
 }
