--- a/src/site-components/Donor/css/custom.css
+++ b/src/site-components/Donor/css/custom.css
@@ -47,13 +47,10 @@
   cursor: pointer;
 }
 
-
-.am-content{
-  padding-top:56px ;
-  padding-bottom:60px ;
-
+.am-content {
+  padding-top: 56px;
+  padding-bottom: 60px;
 }
-
 
 .blood-drop {
   width: 50px;
@@ -68,7 +65,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
- box-shadow: 0px 5px 10px rgb(150 0 0 / 32%);
+  box-shadow: 0px 5px 10px rgb(150 0 0 / 32%);
   font-family: Arial, sans-serif;
   font-size: 18px;
   font-weight: bold;
@@ -90,9 +87,8 @@
 
 .Toastify__toast-container {
   top: 50% !important;
-  transform: translateY(-50%) !important;
+  transform: translateY(-50%) !important; 
 }
-
 .custom-toast {
   background: #393939 !important;
   color: white !important;
@@ -101,6 +97,7 @@
   border-radius: 8px;
   width: 200px !important;
   height: auto !important;
+  min-height: 150px !important;
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -108,13 +105,11 @@
   justify-content: center;
   padding: 15px !important;
   opacity: 1;
-  transition: opacity 0.3s ease-out; /* Smooth fade-out effect */
+  font-size: 20px;
 }
-
-/* Smooth fade-out effect when closing */
-.Toastify__toast--exit {
-  opacity: 0;
-  transition: opacity 0.3s ease-out;
+.Toastify__toast-icon{
+  width: 30px;
+  margin-bottom: 5px;
 }
 
 .Toastify__close-button {
