--- a/src/site-components/common/assets/css/style.css
+++ b/src/site-components/common/assets/css/style.css
@@ -47,11 +47,12 @@ a:focus {
   left: 0;
   right: 0;
   z-index: 999;
-  background: #ffffff;
-  color: #27173e;
+  background: #b42b27;
+  color: white;
   border-bottom: 1px solid #dcdce9;
   padding: 0px 15px;
   gap: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add box shadow */
 }
 
 .appHeader:before {
@@ -109,7 +110,7 @@ a:focus {
   justify-content: center;
   padding: 10px 0px;
   align-items: center;
-  color: black;
+  color: white;
   position: relative;
   font-size: 22px !important;
 }
@@ -8456,4 +8457,18 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .id-dash-top-color{
   height: 80px;
   background-color: #b52a27;
+}
+
+.id-dash-banner-img{
+  border: 2px solid #b52a27;
+  width: 100%;
+  height: 157px;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+.id-header-user-img{
+  background-color: white;
+  padding: 5px;
+  border-radius: 50%;
+  margin-right: 10px;
 }
