--- a/src/site-components/common/assets/css/style.css
+++ b/src/site-components/common/assets/css/style.css
@@ -8178,7 +8178,7 @@ body.dark-mode .cookies-box {
   /* border-radius: 0px 0px 60px; */
   padding: 250px 10px 30px;
   /* background-image: url(../img/BloodDonation.png); */
-  background-image: url(../img/donation-img.jpg);
+  background-image: url(../img/logo-with-content.png);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
